[internal] several restructurings

--- a/src/de/markiewb/netbeans/plugin/savewithsaveactions/SaveactionsPanel.form
+++ b/src/de/markiewb/netbeans/plugin/savewithsaveactions/SaveactionsPanel.form
@@ -31,7 +31,7 @@
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder title="Configure the save actions">
-              <ResourceString PropertyName="titleX" bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.jPanel1.border.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString PropertyName="titleX" bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.jPanel1.border.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </TitledBorder>
           </Border>
         </Property>
@@ -45,18 +45,9 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <Component id="btnShowAllActions" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnResetToDefaults" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="labelNote2" min="-2" max="-2" attributes="0"/>
-                              <Component id="labelNote1" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
-                                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -70,6 +61,17 @@
                               <Component id="txtFixImports" max="32767" attributes="0"/>
                               <Component id="txtFormat" max="32767" attributes="0"/>
                           </Group>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
+                                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="labelNote2" min="-2" max="-2" attributes="0"/>
+                              <Component id="labelNote1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="0" pref="101" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -101,7 +103,10 @@
                       <Component id="txtSave" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="11" max="32767" attributes="0"/>
-                  <Component id="btnResetToDefaults" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="btnResetToDefaults" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnShowAllActions" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
           </Group>
         </DimensionLayout>
@@ -110,21 +115,21 @@
         <Component class="javax.swing.JLabel" name="labelNote1">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.labelNote1.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.labelNote1.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="labelNote2">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.labelNote2.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.labelNote2.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JCheckBox" name="cbFixImports">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.cbFixImports.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.cbFixImports.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
           <Events>
@@ -135,14 +140,14 @@
         <Component class="javax.swing.JTextField" name="txtFixImports">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.txtFixImports.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.txtFixImports.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JCheckBox" name="cbFormat">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.cbFormat.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.cbFormat.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
           <Events>
@@ -153,7 +158,7 @@
         <Component class="javax.swing.JTextField" name="txtFormat">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.txtFormat.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.txtFormat.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
           <Events>
@@ -164,7 +169,7 @@
           <Properties>
             <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.cbSave.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.cbSave.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
@@ -175,7 +180,7 @@
         <Component class="javax.swing.JTextField" name="txtSave">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.txtSave.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.txtSave.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
           <Events>
@@ -185,7 +190,7 @@
         <Component class="javax.swing.JButton" name="btnResetToDefaults">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.btnResetToDefaults.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.btnResetToDefaults.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
           <Events>
@@ -195,9 +200,19 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="de/markiewb/netbeans/plugin/formatandsavemodule/Bundle.properties" key="SaveactionsPanel.jLabel1.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.jLabel1.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnShowAllActions">
+          <Properties>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties" key="SaveactionsPanel.btnShowAllActions.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnShowAllActionsActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
